<resources>
    <string name="app_name">LoginApps</string>
    <string name="login">Login</string>
    <string name="title_register">Create an Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="message_register">Already had one? Login</string>
    <string name="message_login">Forget Password?</string>
    <string name="login_message">Need an Account? Register Here.</string>
    <string name="login_with">Or login with :</string>
    <string name="forgot_password_message">Send me reset password :</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="channel">Channel</string>
</resources>