<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/ivPadlock"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/lock" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPadlock"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/forgot_password_message"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMessage"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edt_background"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:padding="12dp"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="18dp"
        android:padding="12dp"
        android:text="@string/submit"
        android:textColorHint="@color/white"
        android:textSize="14dp" />

</RelativeLayout>