<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="40dp"
            android:background="@drawable/edt_background"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:padding="12dp"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEmail"
            android:layout_marginTop="20dp"
            android:background="@drawable/edt_background"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:padding="12dp"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/message_login"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="6dp"
            android:padding="12dp"
            android:text="@string/login"
            android:textColorHint="@color/white"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/tvForgetPassword"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />


        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login_message"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/tvLoginWith"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/login_with"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/tvRegister"
            app:layout_constraintStart_toStartOf="@+id/tvRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <ImageView
            android:id="@+id/ivMicrosoft"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:src="@drawable/microsoft"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@+id/tvLoginWith"
            app:layout_constraintEnd_toEndOf="@+id/tvLoginWith"
            app:layout_constraintTop_toBottomOf="@id/tvLoginWith" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>